# model-distillation-safety-eval

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/data/: r1_synthetic_small.yaml
configs/distill/: qwen25_0p5b_lora.yaml
configs/eval/: suite_default.yaml  suite_smoke.yaml
configs/pipelines/: local_distill_gpu16.yaml  smoke_test.yaml
configs/safety/: suite_default.yaml  suite_minimal.yaml
docs/: architecture.md  benchmarks.md  hardware.md  project_statement.md  spec_transfer.md
scripts/: run_smoke.sh
src/distill_safe/: cli.py  config.py  logging.py
src/distill_safe/data/: generation.py  prompts.py  toy.py
src/distill_safe/distill/: pipeline.py  sft.py
src/distill_safe/eval/: compare.py  harness.py  lm_eval_runner.py  toy_eval.py
src/distill_safe/safety/: refusal.py  runner.py  specs.py  tests.py
src/distill_safe/teacher/: base.py  dummy.py  factory.py  hf_local.py  openai_compatible.py
src/distill_safe/utils/: io.py  seeding.py
tests/: test_config_load.py  test_refusal.py
